--- a/style.css
+++ b/style.css
@@ -289,6 +289,8 @@ footer{
 .btun{
     background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), #B77540;
     border-radius: 0;
+    text-align: center;
+    line-height: 55px;
     
 }
 
